# nftools

./: .gitignore  .metadata  CLAUDE.md  LICENSE  README.md  enhance_rinf.dart  flake.nix  inno.iss  pubspec.yaml
.claude/: settings.local.json
.github/workflows/: dart.yml
assets/shaders/: wrap.frag
builds/release/: release.sh  server.json
builds/windows/: nftools.iss
lib/: main.dart
lib/api/: ai.dart  api.dart  base.dart  display_api.dart  image_split.dart  syncfile.dart  system_info.dart  utils.dart
lib/common/: constants.dart  global.dart  style.dart
lib/controller/: GlobalController.dart  MainPageController.dart  ai_controller.dart  common_controller.dart  display_controller.dart  display_mode_controller.dart  global_controller.dart  main_page_controller.dart  router_controller.dart  sync_file_controller.dart  system_info_controller.dart  system_mode_controller.dart
lib/pages/: ai_page.dart  display_page.dart  empty_page.dart  home_page.dart  init.dart  main_page.dart  sync_file_page.dart  system_info.dart
lib/pages/image/controller/: image_split_controller.dart
lib/pages/image/page/: image_split_page.dart
lib/pages/image/state/: ImageSplitState.dart  Image_split_state.dart
lib/pages/settings/api/: about_api.dart  auto_start_api.dart
lib/pages/settings/controller/: about_controller.dart  auto_start_controller.dart
lib/pages/settings/page/: settings_page.dart
lib/pages/settings/state/: about_state.dart  auto_start.dart
lib/pages/tar_pdf/api/: api.dart
lib/pages/tar_pdf/controller/: tar_pdf_controller.dart
lib/pages/tar_pdf/page/: tar_pdf_page.dart
lib/pages/tar_pdf/state/: tar_pdf_state.dart
lib/pages/test/page/: glsl_page.dart  test_page.dart
lib/pages/utils/controller/: image_split_controller.dart  img_tool_controller.dart  qr_controller.dart  text_diff_controller.dart  text_tool_controller.dart  video_test_controller.dart
lib/pages/utils/page/: image_split_page.dart  img_tool_page.dart  qr_page.dart  text_diff_page.dart  text_tool_page.dart  utils_page.dart  (+1 more)
lib/router/: router.dart
lib/state/: MainPageState.dart  ai_state.dart  display_mode_state.dart  display_state.dart  main_page_state.dart  router_state.dart  sync_file_state.dart  system_info_state.dart  system_mode_state.dart
lib/utils/: extension.dart  log.dart  nf-widgets.dart  nf_widgets.dart  time.dart  utils.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: CMakeLists.txt  my_application.cc
messages/: about.proto  ai.proto  base.proto  basic.proto  common.proto  display.proto  syncfile.proto  system_info.proto  utils.proto
native/hub/: Cargo.toml  build.rs  readme.md
native/hub/src/: common.rs  lib.rs
native/hub/src/api/: api.rs  mod.rs
native/hub/src/common/: global_data.rs  utils.rs
native/hub/src/dbus/: mod.rs  power_manager.rs  screensaver.rs  wallpaper.rs
native/hub/src/do/: mod.rs  webdav_account_do.rs
native/hub/src/messages/: ai.rs  common.rs  display.rs  image_split.rs  mod.rs  syncfile.rs  tar_pdf.rs  utils.rs
native/hub/src/service/: about.rs  ai.rs  display.rs  global_settings.rs  mod.rs  service.rs  settings.rs  syncfile.rs  system_info.rs  utils.rs
native/hub/src/service/img/: img_split.rs  mod.rs
native/hub/src/service/pdf/: mod.rs  ocr.rs  orb.rs  str_format.rs  tar_pdf.rs
native/hub/src/service/settings/: about.rs  autostart.rs  mod.rs
test/utils/: nf_widget.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
(+20 files in other folders)
