[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "6.15.0"
prost = "0.12.6"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
async-trait = "0.1.83"
anyhow = "1.0.89"
ahash = "0.8.11"
dashmap = "6.1.0"
ddc = "0.2.2"
serde = { version = "1.0.210", features = ["derive"] }
chrono = "0.4.38"
dirs = "5.0.1"
serde_json = "1.0.128"
reqwest_dav = "0.1.13"

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.6.0", features = ["sync", "rt"] }
# wasm-bindgen = "0.2.92"

[target."cfg(windows)".dependencies]
ddc-winapi = "0.2.2"
winreg = "0.52.0"
