[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.5"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "8.1.0"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
async-trait = "0.1.83"
anyhow = "1.0.89"
ahash = { version = "0.8.11", features = ["serde"] }
#dashmap = "6.1.0"
ddc = "0.2.2"
serde = { version = "1.0.210", features = ["derive"] }
#chrono = "0.4.38"
dirs = "5.0.1"
serde_json = "1.0.128"
reqwest_dav = "0.1.13"
log = "0.4.22"
sysinfo = { version = "0.32.0", features = ["system"],  default-features = false }
#fast_inv_sqrt = "1.0.1"
machine-uid = "0.5.3"
walkdir = "2.5.0"
filetime = "0.2.25"
sha2 = "0.10.8"
image = "0.25.5"
notify-rust = "4.11.3"
reqwest = { version = "0.12.9", features = ["stream", "json"] }
futures-util = "0.3.31"
futures = "0.3.31"
bytes = "1.9.0"
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
auto-launch = "0.5.0"
convert_case = "0.8.0"
qrcode-generator = "5.0.0"
rqrr = "0.9.3"
opencv = { version = "0.94.4" }

[target."cfg(windows)".dependencies]
ddc-winapi = "0.2.2"
winapi = { version = "0.3.9", features = ["winbase"] }
winreg = "0.52.0"

[target."cfg(unix)".dependencies]
dbus = "0.9.7"
dbus-tokio = "0.7.6"
ddc-i2c = { version = "0.2.2", features = ["i2c-linux"] }
xdg = "2.5.2"
