[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.6"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "8.7.2"
tokio = { version = "1.39.2", features = ["full"] }
async-trait = "0.1.83"
anyhow = "1.0.89"
ahash = { version = "0.8.11", features = ["serde"] }
#dashmap = "6.1.0"
serde = { version = "1.0.210", features = ["derive"] }
dirs = "5.0.1"
serde_json = "1.0.128"
log = "0.4.22"
sysinfo = { version = "0.32.0", features = ["system"],  default-features = false }
#fast_inv_sqrt = "1.0.1"
machine-uid = "0.5.3"
sha2 = "0.10.8"
notify-rust = "4.11.3"
reqwest = { version = "0.12.9", features = ["stream", "json", "multipart"] }
futures = "0.3.31"
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
convert_case = "0.8.0"
simple-log = "2.3.0"
mimalloc = "0.1.47"